@@ -669,7 +669,7 @@ public class ApplesToApplesDisruptorBenchmark {
 
     private static ThreadFactory namedThreadFactory(final String name) {
         return runnable -> {
-            final Thread thread = Thread.ofPlatform().unstarted(runnable);
+            final Thread thread = new Thread(runnable);
             thread.setName(name);
             thread.setDaemon(true);
             return thread;
